[package]
name = "typst-time-machine"
version = "0.1.2"
edition = "2024"
rust-version = "1.92"
description = "Browse rendered Typst documents through Git and Jujutsu history"
license = "MIT"
repository = "https://github.com/EzraCerpac/typst-time-machine"
readme = "README.md"
keywords = ["typst", "git", "jujutsu", "visual-diff"]
categories = ["command-line-utilities", "development-tools"]
include = [
  "/src/**",
  "/web/index.html",
  "/web/styles.css",
  "/web/dist/app.js",
  "/web/dist/diff-worker.js",
  "/docs/assets/typst-time-machine-collage.jpg",
  "/README.md",
  "/LICENSE",
]

[[bin]]
name = "ttm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
directories = "6.0"
futures-util = "0.3"
open = "5.3"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.27"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1.1"
typst = "=0.15.0"
typst-kit = { version = "=0.15.1", default-features = false, features = ["datetime", "embedded-fonts", "emit-diagnostics", "scan-fonts", "system-downloader", "system-files"] }
typst-layout = "=0.15.1"
typst-svg = "=0.15.1"
walkdir = "2.5"

[profile.release]
lto = "thin"
strip = true

[dev-dependencies]
libc = "0.2"

# Remove once citationberg releases its quick-xml 0.41 security update.
[patch.crates-io]
citationberg = { git = "https://github.com/typst/citationberg", rev = "06a591e2f237d25e1dfdedac3f3d1494c496c52d" }
